fixed navbar links and spacing

--- a/style.css
+++ b/style.css
@@ -159,7 +159,6 @@ nav {
     padding: var(--padding3, 12px) 0;
     min-height: 64px;
     z-index: 100;
-
 }
 
 nav svg {
@@ -194,7 +193,6 @@ nav li {
     opacity: 0;
     position: absolute;
     width: 100%;
-    margin-left: -12px; /* bandaid fix */
     height: fit-content;
     background-color: var(--app-background-light);
     display: none;
